# sequence

./: .gitignore  .travis.yml  README  README.md  index.html  make_documentation.sh  params.json  seq_comp.f90
_old/: Makefile
cxx/: CMakeLists.txt
cxx/Doxygen/: Doxyfile.in
cxx/cmake/macro/: test_macro.cmake
cxx/cmake/scripts/: script_diff.sh
cxx/cmake/tests/: runtest.cmake
cxx/include/: linear_algebra.h  matrix.h  permutation.h  sequence_problem.h  utilities.h
cxx/main/: main.cc
cxx/scripts/: fix_tests  indent
cxx/source/: linear_algebra.cc  main.cc  matrix.cc  permutation.cc  sequence_problem.cc  utilities.cc
cxx/tests/: CMakeLists.txt  generalized_permutation_00.cc  generalized_permutation_00.output  matrix_00.cc  matrix_00.output  matrix_000.cc  matrix_01.cc  matrix_01.output  matrix_02.cc  matrix_02.output  matrix_03.cc  matrix_03.output  matrix_04.cc  matrix_04.output  matrix_06.cc  matrix_06.output  permutation_00.cc  permutation_00.output  permutation_01.cc  script_diff.sh  script_test.sh  void.cc  void2.cc  void_01.cc  void_02.cc  void_2.cc
doc/: annotated.html  class_h_matrix-members.html  class_h_matrix.html  class_h_matrix.js  class_l_permutation-members.html  class_l_permutation.html  class_l_permutation.js  class_matrix-members.html  class_matrix.html  class_matrix.js  class_permutation-members.html  class_permutation.html  class_permutation.js  class_sequence_problem-members.html  class_sequence_problem.html  class_sequence_problem.js  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hungarian__matrix_8cc.html  hungarian__matrix_8h.html  hungarian__matrix_8h_source.html  index.html  matrix_8cc.html  matrix_8h.html  matrix_8h_source.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaceutilities.html  (+13 more)
doc/html/: annotated.html  annotated.js  class_h_matrix-members.html  class_h_matrix.html  class_l_permutation-members.html  class_l_permutation.html  class_matrix-members.html  class_matrix.html  class_permutation-members.html  class_permutation.html  class_sequence_problem-members.html  class_sequence_problem.html  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  hungarian__matrix_8cc.html  hungarian__matrix_8h.html  hungarian__matrix_8h_source.html  index.html  matrix_8cc.html  matrix_8h.html  matrix_8h_source.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces.js  namespaceutilities.html  navtreeindex0.js  output_8cc.html  permutation_8cc.html  permutation_8h.html  (+8 more)
doc/html/search/: all_0.js  all_6.js  all_7.js  all_8.js  all_9.js  all_e.js  files_4.js  functions_1.js  functions_3.js  functions_4.js  functions_8.js  functions_9.js  functions_a.js  functions_d.js  variables_0.js  variables_3.js
doc/include/: utilities.h.gch
doc/search/: all_2.js  all_5.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_3.js  functions_5.js  functions_7.js  functions_b.js  functions_c.js  functions_e.js  related_0.js  searchdata.js  variables_1.js  variables_2.js
include/: hungarian_matrix.h  mask.h  matrix.h  permutation.h  sequence_problem.h  utilities.h
main/: main.cc
scripts/: README.md
source/: hungarian_matrix.cc  mask.cc  matrix.cc  output.cc  permutation.cc  sequence_problem.cc  utilities.cc
tests/: matrix_00.output  matrix_01.output  matrix_02.output  matrix_03.cc  matrix_03.output  matrix_04.cc  matrix_04.output  matrix_05.cc  matrix_05.output  matrix_06.cc  matrix_06.output  permutation_00.cc  permutation_01.cc  permutation_01.output  utilities_00.cc  utilities_00.output
