CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(sequence-comparison)
FILE(GLOB cc_files source/*.cc)
INCLUDE_DIRECTORIES(include)
ADD_EXECUTABLE(sequence-comparison ${cc_files})

FIND_PACKAGE(MPI REQUIRED)
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(sequence-comparison ${MPI_LIBRARIES})

IF(MPI_COMPILE_FLAGS)
  SET_TARGET_PROPERTIES(  sequence-comparison
    PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}"
  )
ENDIF()

IF(MPI_LINK_FLAGS)
  SET_TARGET_PROPERTIES(  sequence-comparison
    PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}"
  )
ENDIF()

# FIND_PACKAGE(OpenMP)
# if (OPENMP_FOUND)
#   set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
# ENDIF()

ADD_CUSTOM_TARGET(run
  COMMAND sequence-comparison
  DEPENDS sequence-comparison
  WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
)

OPTION(ENABLE_TESTS "Enable testing" OFF)
IF (ENABLE_TESTS STREQUAL ON)
  ENABLE_TESTING()
  ADD_SUBDIRECTORY(tests)
ENDIF()
